--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
@@ -23,6 +22,7 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@docusaurus/core": "^3.3.2",
     "@docusaurus/module-type-aliases": "3.3.2",
     "@docusaurus/types": "3.3.2",
     "gh-pages": "^6.1.1"
